@@ -94,7 +94,9 @@ module ExtractsPath
     @options = params.select {|key, value| allowed_options.include?(key) && !value.blank? }
     @options = HashWithIndifferentAccess.new(@options)
 
-    @id = Addressable::URI.normalize_component(get_id)
+    @id = params[:id] || params[:ref]
+    @id += "/" + params[:path] unless params[:path].blank?
+
     @ref, @path = extract_ref(@id)
     @repo = @project.repository
     if @options[:extended_sha1].blank?
@@ -115,13 +117,5 @@ module ExtractsPath
 
   def tree
     @tree ||= @repo.tree(@commit.id, @path)
-  end
-
-  private
-
-  def get_id
-    id = params[:id] || params[:ref]
-    id += "/" + params[:path] unless params[:path].blank?
-    id
   end
 end
