@@ -30,17 +30,6 @@ describe ExtractsPath, lib: true do
       expect(@logs_path).to eq("/#{@project.path_with_namespace}/refs/#{ref}/logs_tree/files/ruby/popen.rb")
     end
 
-    context 'escaped slash character in ref' do
-      let(:ref) { 'improve%2Fawesome' }
-
-      it 'has no escape sequences in @ref or @logs_path' do
-        assign_ref_vars
-
-        expect(@ref).to eq('improve/awesome')
-        expect(@logs_path).to eq("/#{@project.path_with_namespace}/refs/#{ref}/logs_tree/files/ruby/popen.rb")
-      end
-    end
-
     context 'ref contains %20' do
       let(:ref) { 'foo%20bar' }
 
@@ -50,6 +39,16 @@ describe ExtractsPath, lib: true do
         assign_ref_vars
 
         expect(@id).to start_with('foo%20bar/')
+      end
+    end
+
+    context 'path contains space' do
+      let(:params) { { path: 'with space', ref: '38008cb17ce1466d8fec2dfa6f6ab8dcfe5cf49e' } }
+
+      it 'is not converted to %20 in @path' do
+        assign_ref_vars
+
+        expect(@path).to eq(params[:path])
       end
     end
   end
